# GeekBrains_lessons

./: .gitignore  CMakeLists.txt  README.md  parallel_executor.hpp  parallelization_unit.hpp  recursive_walk.cpp  recursive_walk.hpp  stdafx.hpp  thread_safe_container.hpp  thread_safe_list.hpp  thread_status.hpp
tests/: CMakeLists.txt  test-unit-parallel_executor.cpp  test-unit-recursive-walk.cpp  test-unit-recursive_walk.cpp  unit-test-example_1.cpp
